animated text in the department page added

--- a/public/css/custom-new.css
+++ b/public/css/custom-new.css
@@ -714,6 +714,21 @@ p {
     margin-left: 4vh;
 } 
 
+.zoom-in-zoom-out-text{
+    animation: zoom-in-zoom-out 0.9s ease infinite;
+}
 
+@keyframes zoom-in-zoom-out{
+    0% {
+        transform: scale(1,1);
+    }
+    50% {
+        transform: scale(1.5,1.5);
+    }
+    100% {
+        transform: scale(1,1);
+    }
+
+}
 
 
