--- a/views/layouts/department_page.ejs
+++ b/views/layouts/department_page.ejs
@@ -617,7 +617,7 @@
               <div class="w-full lg:w-1/2">
                 <div class="lg:mt-9 text-center">
                     <h2 class="text-2xl font-bold sm:text-3xl">Wanna have an Internship in E-cell</h2>
-                  <h2 class="text-lg font-normal sm:text-xl mt-6">
+                  <h2 class="text-lg font-normal sm:text-xl mt-6 zoom-in-zoom-out-text">
                     Apply Here
                     <!-- <span class="block font-normal">Monthly Magazine</span> -->
                   </h2>
