--- a/views/layouts/home-new.ejs
+++ b/views/layouts/home-new.ejs
@@ -23,10 +23,11 @@
 
   <link href="/css/styles.css" rel="stylesheet">
 
+  <!-- font awesome icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    crossorigin="anonymous" />
+
 </head>
 
 <body>
@@ -209,6 +210,76 @@
       </div>
     </div>
   </section>
+  <!-- Departments Section (Top 3) -->
+  <section id="departments" class="pt-16">
+    <div class="mb-4 section-title">
+      <div class="line m-auto"></div>
+        <p class="text-center text-2xl font-normal text-black"> Our Top Performing</p>
+        <p class="text-center text-5xl font-semibold text-black"> Departments</p>
+        <p class="text-center text-2xl mt-2 font-normal text-black"> Of the Month</p>
+   
+    </div>
+     <div id="department_cards" class="flex flex-col mx-9 space-x-5 mt-10 md:flex-row sm:flex-row">
+        <div
+        class="text-center py-10 border-2 border-transparent hover:shadow-xl duration-200 hover:border-green-600 px-5 rounded-lg">
+        <div class=" wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+          <div
+            class="from-green-700 to-indigo-300 bg-gradient-to-br flex justify-center items-center h-24 w-24 mx-auto rounded-full">
+            <i class="lni lni-certificate text-white text-4xl"></i>
+          </div>
+          <div class="mt-8 services-content">
+            <h4 class="mb-8 text-xl font-bold text-gray-900">Department Name</h4>
+            <p class="mb-8"><i class="fa fa-quote-left text-black" aria-hidden="true"></i>
+            Lorem ipsum dolor sit amet,consetetur sadipscing elitr, seddiam nonu eirmod
+              tempor
+              invidunt labore.(Tagline)</p>
+            <a class="duration-300 hover:text-purple-600" href="javascript:void(0)">Visit Department<i
+                class="ml-2 lni lni-chevron-right"></i></a>
+          </div>
+        </div>
+      </div>
+      <div
+      class="text-center py-10 border-2 border-transparent hover:shadow-xl duration-200 hover:border-red-600 px-5 rounded-lg">
+      <div class=" wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+        <div
+          class="from-red-600 to-gray-200 bg-gradient-to-br flex justify-center items-center h-24 w-24 mx-auto rounded-full">
+          <i class="lni lni-certificate text-white text-4xl"></i>
+        </div>
+        <div class="mt-8 services-content">
+          <h4 class="mb-8 text-xl font-bold text-gray-900">Department Name</h4>
+          <p class="mb-8"><i class="fa fa-quote-left text-black" aria-hidden="true"></i>
+          Lorem ipsum dolor sit amet,consetetur sadipscing elitr, seddiam nonu eirmod
+            tempor
+            invidunt labore.(Tagline)</p>
+          <a class="duration-300 hover:text-purple-600" href="javascript:void(0)">Visit Department<i
+              class="ml-2 lni lni-chevron-right"></i></a>
+        </div>
+      </div>
+    </div>
+    <div
+    class="text-center py-10 border-2 border-transparent hover:shadow-xl duration-200 hover:border-indigo-600 px-5 rounded-lg">
+    <div class=" wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+      <div
+        class="from-indigo-700 to-pink-300 bg-gradient-to-br flex justify-center items-center h-24 w-24 mx-auto rounded-full">
+        <i class="lni lni-certificate text-white text-4xl"></i>
+      </div>
+      <div class="mt-8 services-content">
+        <h4 class="mb-8 text-xl font-bold text-gray-900">Department Name</h4>
+        <p class="mb-8"><i class="fa fa-quote-left text-black" aria-hidden="true"></i>
+        Lorem ipsum dolor sit amet,consetetur sadipscing elitr, seddiam nonu eirmod
+          tempor
+          invidunt labore.(Tagline)</p>
+        <a class="duration-300 hover:text-purple-600" href="javascript:void(0)">Visit Department<i
+            class="ml-2 lni lni-chevron-right"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+  <a class="m-auto text-center w-40 mt-3 block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-2  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500"
+      data-scroll-nav="0" href="#" rel="nofollow">View All Departments</a>
+
+  </section>
+  <div class="my-10"></div>
 
 
   <!-- Features Section -->
