Bug Fixes of Department Page Done

--- a/views/layouts/departments_page.ejs
+++ b/views/layouts/departments_page.ejs
@@ -115,7 +115,7 @@
         <div
           class="flex 2xl:space-x-10 xl:space-x-10 lg:space-x-10 justify-between xl:flex-row 2xl:flex-row lg:flex-row md:flex-col flex-col">
           <!-- grid gap-8 lg:grid-cols-2 sm:grid-cols-1 md:grid-cols-1 -->
-          <div class="w-auto mb-2 bg-white border-2 border-transparent duration-200 hover:border-red-600 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+          <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 duration-200 hover:border-red-600 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
             <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
             <div class="flex flex-col px-4 pt-3">
               <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
@@ -151,7 +151,7 @@
               </div>
             </div>
           </div>
-          <div class="w-auto mb-2 bg-white border-2 border-transparent hover:border-green-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
+          <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-green-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
             <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
             <div class="flex flex-col px-4 pt-3">
               <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
@@ -187,7 +187,7 @@
               </div>
             </div>
           </div>
-          <div class="w-auto mb-2 bg-white border-2 border-transparent hover:border-blue-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
+          <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-blue-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
             <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
             <div class="flex flex-col px-4 pt-3">
               <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
@@ -227,7 +227,7 @@
         <div
           class="flex 2xl:space-x-10 xl:space-x-10 lg:space-x-10 justify-between xl:flex-row 2xl:flex-row lg:flex-row md:flex-col flex-col">
           <!-- grid gap-8 lg:grid-cols-2 sm:grid-cols-1 md:grid-cols-1 -->
-          <div class="w-auto mb-2 bg-white border-2 border-transparent hover:border-yellow-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+          <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-yellow-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
             <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
             <div class="flex flex-col px-4 pt-3">
               <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
@@ -263,7 +263,7 @@
               </div>
             </div>
           </div>
-          <div class="w-auto mb-2 bg-white border-2 border-transparent hover:border-indigo-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
+          <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-indigo-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
             <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
             <div class="flex flex-col px-4 pt-3">
               <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
@@ -299,7 +299,7 @@
               </div>
             </div>
           </div>
-          <div class="w-auto mb-2 bg-white border-2 border-transparent hover:border-purple-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
+          <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-purple-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
             <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
             <div class="flex flex-col px-4 pt-3">
               <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
@@ -338,7 +338,7 @@
         </div>
         <div
           class="flex 2xl:space-x-10 xl:space-x-10 lg:space-x-10 justify-between xl:flex-row 2xl:flex-row lg:flex-row md:flex-col flex-col">
-          <div class="w-auto mb-2 bg-white border-2 border-transparent hover:border-pink-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+          <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-pink-600 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
             <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
             <div class="flex flex-col px-4 pt-3">
               <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
@@ -374,7 +374,7 @@
               </div>
             </div>
           </div>
-          <div class="w-auto mb-2 bg-white border-2 border-transparent hover:border-red-300 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
+          <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-red-300 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
             <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
             <div class="flex flex-col px-4 pt-3">
               <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
@@ -410,7 +410,7 @@
               </div>
             </div>
           </div>
-          <div class="w-auto mb-2 bg-white border-2 border-transparent hover:border-blue-500 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
+          <div class="w-auto mb-2 bg-white border-2 border-transparent mt-5 hover:border-blue-500 duration-200 layered-card rounded wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
             <img class="rounded-sm h-52 w-full" src="/img/hero-steve.jpg">
             <div class="flex flex-col px-4 pt-3">
               <h1 class="font-semibold text-center text-3xl text-black">Department Name</h1>
@@ -454,14 +454,14 @@
   <!-- Footer Section -->
   <footer class="relative z-10 footer-area pt-2">
     <div class="footer-bg" style="background-image: url(/img/footer-bg.svg);"></div>
-    <div class="container pt-96">
+    <div class="container pt-10">
       <div id="footer"  class="px-6 pt-3 pb-5 mb-10 bg-white rounded-lg shadow-2xl md:px-12 subscribe-area wow fadeIn"
             data-wow-duration="1s" data-wow-delay="0.5s">
             <div class="flex flex-col justify-center items-center">
               <div class="w-full lg:w-1/2">
-                <div class="lg:mt-9 text-center">
+                <div class="lg:mt-6 text-center">
                     <h2 class="text-2xl font-bold sm:text-3xl">Feedback Form</h2>
-                  <h2 class="text-lg sm:text-xl mt-6">
+                  <h2 class="text-lg sm:text-xl mt-4">
                     Your feedback is <span class="font-bold">important</span> to us!
                   </h2>
                 </div>
@@ -482,10 +482,10 @@
               </div>
             </div>
           </div>
-      <div class="footer-widget pb-24">
+      <div class="footer-widget pb-16">
         <div class="row">
           <div class="w-4/5 md:w-3/5 lg:w-2/6">
-            <div class="mt-12  wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+            <div class="mt-6  wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
               <a class="inline-block mb-8 logo" href="index.html">
                 <span class="text-white text-4xl font-bold">E-Cell</span>
               </a>
