--- a/public/css/custom-new.css
+++ b/public/css/custom-new.css
@@ -1045,3 +1045,138 @@ p {
     text-align: left;
   }
 }
+
+/* Hero Section Carousel */
+.slider-container {
+    position: absolute;
+    margin: 0 auto;
+    width: 800px;
+    height: 600px;
+}
+
+.slider-container .bullet-container {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.slider-container .bullet-container .bullet {
+    margin-right: 14px;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: white;
+    opacity: 0.5;
+}
+
+.slider-container .bullet-container .bullet:last-child {
+    margin-right: 0px;
+}
+
+.slider-container .bullet-container .bullet.active {
+    opacity: 1;
+}
+
+.slider-container .slider-content {
+    position: relative;
+    left: 50%;
+    top: 50%;
+    width: 70%;
+    height: 60%;
+    transform: translate(-50%, -50%);
+}
+
+.slider-container .slider-content .slider-single {
+    position: absolute;
+    z-index: 0;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition: z-index 0ms 250ms;
+}
+
+.slider-container .slider-content .slider-single .slider-single-image {
+    position: relative;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.2);
+    transition: 500ms cubic-bezier(0.17, 0.67, 0.55, 1.43);
+    transform: scale(0);
+    opacity: 0;
+}
+
+.slider-container .slider-content .slider-single.preactivede .slider-single-image {
+    transform: translateX(-50%) scale(0);
+}
+
+.slider-container .slider-content .slider-single.preactive {
+    z-index: 1;
+}
+
+.slider-container .slider-content .slider-single.preactive .slider-single-image {
+    opacity: 0.3;
+    transform: translateX(-25%) scale(0.8);
+}
+
+.slider-container .slider-content .slider-single.proactive {
+    z-index: 1;
+}
+
+.slider-container .slider-content .slider-single.proactive .slider-single-image {
+    opacity: 0.3;
+    transform: translateX(25%) scale(0.8);
+}
+.slider-container .slider-content .slider-single.proactivede .slider-single-image {
+    transform: translateX(50%) scale(0);
+}
+.slider-container .slider-content .slider-single.active {
+    z-index: 2;
+}
+.slider-container .slider-content .slider-single.active .slider-single-image {
+    opacity: 1;
+    transform: translateX(0%) scale(1);
+}
+.slider-container .slider-left {
+    transition: 0.25s all ease-in-out;
+    position: absolute;
+    z-index: 3;
+    display: block;
+    right: 85%;
+    top: 50%;
+    font-weight: 600;
+    color: black;
+    transform: translateY(-50%);
+    padding: 20px 15px;
+    opacity: 0.2;
+    margin-right: -2px;
+}
+.slider-container .slider-left:hover {
+    opacity: 1;
+}
+.slider-container .slider-right {
+    transition: 0.25s all ease-in-out;
+    position: absolute;
+    z-index: 3;
+    display: block;
+    left: 85%;
+    top: 50%;
+    font-weight: 600;
+    color: black;
+    transform: translateY(-50%);
+    padding: 20px 15px;
+    margin-left: -2px;
+    opacity: 0.2;
+}
+.slider-container .slider-right:hover{
+    opacity: 1;
+
+}
+.slider-container .not-visible {
+    display: none !important;
+}
