latest event landing page carousel

--- a/views/layouts/eventLandingPage.ejs
+++ b/views/layouts/eventLandingPage.ejs
@@ -20,7 +20,6 @@
   <link rel="stylesheet" href="/css/LineIcons.2.0.css">
 
   <link rel="stylesheet" href="/css/custom-new.css">
-
   <link href="/css/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
@@ -33,7 +32,6 @@
 
   <!-- Animate Styles CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
 </head>
 
 <body>
@@ -130,48 +128,44 @@
               </div>
             </div>
           </div>
-          <div class="justify-center row -mt-24 z-100 wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">
-            <div class="w-full lg:w-2/3 overflow-y-hidden overflow-x-hidden">
-              <div class="slider-container">
+          <div class="slider-body -mt-32 wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.2s">
 
-                <div class="slider-content">
+            <div class="slider-container">
 
-                  <div class="slider-single">
-                    <img class="slider-single-image h-auto w-auto" src="https://picsum.photos/id/973/200/300" alt="1" />
-                  </div>
+              <div class="slider-content">
 
-                  <div class="slider-single">
-                    <img class="slider-single-image h-auto w-auto" src="https://picsum.photos/id/974/200/300" alt="2" />
-                  </div>
+                <div class="slider-single">
+                  <img class="slider-single-image rounded-lg mx-auto block" src="https://picsum.photos/id/973/200/300" alt="1" />
+                </div>
 
-                  <div class="slider-single">
-                    <img class="slider-single-image h-auto w-auto" src="https://picsum.photos/id/975/200/300" alt="3" />
-                  </div>
+                <div class="slider-single">
+                  <img class="slider-single-image rounded-lg mx-auto block" src="https://picsum.photos/id/974/200/300" alt="2" />
+                </div>
 
-
-                  <div class="slider-single">
-                    <img class="slider-single-image h-auto w-auto" src="https://picsum.photos/id/976/200/300" alt="4" />
-                  </div>
+                <div class="slider-single">
+                  <img class="slider-single-image rounded-lg mx-auto block" src="https://picsum.photos/id/975/200/300" alt="3" />
+                </div>
 
 
-                  <div class="slider-single">
-                    <img class="slider-single-image h-auto w-auto" src="https://picsum.photos/id/977/200/300" alt="5" />
-                  </div>
+                <div class="slider-single">
+                  <img class="slider-single-image rounded-lg mx-auto block" src="https://picsum.photos/id/976/200/300" alt="4" />
+                </div>
 
-                  <div class="slider-single">
-                    <img class="slider-single-image h-auto w-auto" src="https://picsum.photos/id/978/200/300" alt="6" />
-                  </div>
+
+                <div class="slider-single">
+                  <img class="slider-single-image rounded-lg mx-auto block" src="https://picsum.photos/id/977/200/300" alt="5" />
+                </div>
+
+                <div class="slider-single">
+                  <img class="slider-single-image rounded-lg mx-auto block" src="https://picsum.photos/id/978/200/300" alt="6" />
                 </div>
               </div>
             </div>
           </div>
-
         </div>
         <div id="particles-1" class="particles"></div>
       </div>
   </header>
-
-
 
   <!-- Event Description Section -->
   <section id="aboutEvent" class="pt-44 video-counter">
@@ -574,7 +568,6 @@
 
   <script src="/js/main.js"></script>
 
-
   <script>
     $('.owl-carousel').owlCarousel({
       loop: true,
@@ -601,6 +594,7 @@
       once: true,
     });
   </script>
+
   <script>
 
     const repeat = false;
@@ -830,8 +824,7 @@
       }
     }
 
-    slideInitial();
-  </script>
+    slideInitial();</script>
 
 </body>
 
