--- a/public/css/custom-new.css
+++ b/public/css/custom-new.css
@@ -1047,8 +1047,34 @@ p {
 }
 
 /* Hero Section Carousel */
+@keyframes heartbeat {
+    0% {
+        transform: scale(0);
+    }
+    25% {
+        transform: scale(1.2);
+    }
+    50% {
+        transform: scale(1);
+    }
+    75% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.slider-body {
+    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 100%;
+    height: 1200px;
+}
+
 .slider-container {
-    position: absolute;
+    position: relative;
     margin: 0 auto;
     width: 800px;
     height: 600px;
@@ -1111,6 +1137,70 @@ p {
     opacity: 0;
 }
 
+.slider-container .slider-content .slider-single .slider-single-download {
+    position: absolute;
+    display: block;
+    right: -22px;
+    bottom: 12px;
+    padding: 15px;
+    color: #333333;
+    background-color: #fdc84b;
+    font-size: 18px;
+    font-weight: 600;
+    font-family: "karla";
+    border-radius: 5px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    transition: 500ms cubic-bezier(0.17, 0.67, 0.55, 1.43);
+    opacity: 0;
+}
+
+.slider-container .slider-content .slider-single .slider-single-download:hover, .slider-container .slider-content .slider-single .slider-single-download:focus {
+    outline: none;
+    text-decoration: none;
+}
+
+.slider-container .slider-content .slider-single .slider-single-title {
+    display: block;
+    float: left;
+    margin: 16px 0 0 20px;
+    font-size: 20px;
+    font-family: "karla";
+    font-weight: 400;
+    color: #ffffff;
+    transition: 500ms cubic-bezier(0.17, 0.67, 0.55, 1.43);
+    opacity: 0;
+}
+
+.slider-container .slider-content .slider-single .slider-single-likes {
+    display: block;
+    float: right;
+    margin: 16px 20px 0 0;
+    transition: 500ms cubic-bezier(0.17, 0.67, 0.55, 1.43);
+    opacity: 0;
+}
+
+.slider-container .slider-content .slider-single .slider-single-likes i {
+    font-size: 20px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 5px;
+    color: #ff6060;
+    transition: 500ms cubic-bezier(0.17, 0.67, 0.55, 1.43);
+    transform: scale(0);
+}
+
+.slider-container .slider-content .slider-single .slider-single-likes p {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0;
+    color: #ffffff;
+}
+
+.slider-container .slider-content .slider-single .slider-single-likes:hover, .slider-container .slider-content .slider-single .slider-single-likes:focus {
+    outline: none;
+    text-decoration: none;
+}
+
 .slider-container .slider-content .slider-single.preactivede .slider-single-image {
     transform: translateX(-50%) scale(0);
 }
@@ -1124,6 +1214,18 @@ p {
     transform: translateX(-25%) scale(0.8);
 }
 
+.slider-container .slider-content .slider-single.preactive .slider-single-download {
+    transform: translateX(-150px);
+}
+
+.slider-container .slider-content .slider-single.preactive .slider-single-title {
+    transform: translateX(-150px);
+}
+
+.slider-container .slider-content .slider-single.preactive .slider-single-likes {
+    transform: translateX(-150px);
+}
+
 .slider-container .slider-content .slider-single.proactive {
     z-index: 1;
 }
@@ -1132,51 +1234,82 @@ p {
     opacity: 0.3;
     transform: translateX(25%) scale(0.8);
 }
+
+.slider-container .slider-content .slider-single.proactive .slider-single-download {
+    transform: translateX(150px);
+}
+
+.slider-container .slider-content .slider-single.proactive .slider-single-title {
+    transform: translateX(150px);
+}
+
+.slider-container .slider-content .slider-single.proactive .slider-single-likes {
+    transform: translateX(150px);
+}
+
 .slider-container .slider-content .slider-single.proactivede .slider-single-image {
     transform: translateX(50%) scale(0);
 }
+
 .slider-container .slider-content .slider-single.active {
     z-index: 2;
 }
+
 .slider-container .slider-content .slider-single.active .slider-single-image {
     opacity: 1;
     transform: translateX(0%) scale(1);
 }
+
+.slider-container .slider-content .slider-single.active .slider-single-download {
+    opacity: 1;
+    transition-delay: 100ms;
+    transform: translateX(0px);
+}
+
+.slider-container .slider-content .slider-single.active .slider-single-title {
+    opacity: 1;
+    transition-delay: 200ms;
+    transform: translateX(0px);
+}
+
+.slider-container .slider-content .slider-single.active .slider-single-likes {
+    opacity: 1;
+    transition-delay: 300ms;
+    transform: translateX(0px);
+}
+
+.slider-container .slider-content .slider-single.active .slider-single-likes i {
+    animation-name: heartbeat;
+    animation-duration: 500ms;
+    animation-delay: 900ms;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
 .slider-container .slider-left {
-    transition: 0.25s all ease-in-out;
     position: absolute;
     z-index: 3;
     display: block;
     right: 85%;
     top: 50%;
-    font-weight: 600;
-    color: black;
+    color: #ffffff;
     transform: translateY(-50%);
     padding: 20px 15px;
-    opacity: 0.2;
     margin-right: -2px;
 }
-.slider-container .slider-left:hover {
-    opacity: 1;
-}
+
 .slider-container .slider-right {
-    transition: 0.25s all ease-in-out;
     position: absolute;
     z-index: 3;
     display: block;
     left: 85%;
     top: 50%;
-    font-weight: 600;
-    color: black;
+    color: #ffffff;
     transform: translateY(-50%);
     padding: 20px 15px;
     margin-left: -2px;
-    opacity: 0.2;
 }
-.slider-container .slider-right:hover{
-    opacity: 1;
 
-}
 .slider-container .not-visible {
     display: none !important;
 }
