1. Routes Folder restructured 2. Server file updated for routes 3. Staff controller and dashboard controller are different files now 4. Views folder have home, auth, dashboard, archive 5. Archive folder contains the old webpages, which are not in used

--- a/views/layouts/error-404.ejs
+++ b/views/layouts/error-404.ejs
@@ -1,5 +1,5 @@
-<%- include("./partials/head.ejs") %> 
-<%- include("./partials/links.ejs") %>
+<%- include("./home/partials/archive/head.ejs") %> 
+<%- include("./home/partials/archive/links.ejs") %>
 
 <body class="h-screen">
     <div class="min-w-screen min-h-screen bg-blue-100 flex items-center p-5 lg:p-10 overflow-hidden relative">
@@ -11,7 +11,7 @@
                 <div class="mb-10 md:mb-20 text-gray-600 font-light">
                     <h1 class="font-black uppercase text-3xl lg:text-5xl text-indigo-700 mb-10">Error<br>404</h1>
                     <p class="font-semibold">Page not found!</p>
-                    <p class="font-normal">Invalid route or this route doesn't exist</p>
+                    <p class="font-normal mt-4">Invalid URL <br> <span class="font-bold">OR</span><br>The page you requested is no longer available.</p>
                 </div>
                 <div class="mb-20 md:mb-0">
                     <a href="/" class="text-lg p-2 rounded bg-indigo-700 font-light outline-none focus:outline-none transform transition-all hover:scale-110 text-white">Go Back</a>
