1. Added uuid functionality 2. Integrated uuid functionality with staff registration 3. Added flash messages in controllers and dashboard header and staff login 4. Added uuid creation route 5. Updated validation for registration key

--- a/views/layouts/auth/staff-login.ejs
+++ b/views/layouts/auth/staff-login.ejs
@@ -77,6 +77,12 @@
                                     font-semibold text-red-500">
                                     <%= error %>
                                 </span>
+                                <span id="login-notify"
+                                    class="text-md bg-gray-900 <%= success.length === 1 ? "py-1 px-2 mb-2" : " " %>
+                                    rounded
+                                    font-semibold text-green-500">
+                                    <%= success %>
+                                </span>
                             </div>
                         </div>
                     </div>
